# python-uv-bootstrap

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: conf.py
docs/source/: libs.rst
tests/: test_main.py
