[project]
name = "python-project"
dynamic = ["version"]
description = ""
readme = "README.md"
authors = [{ name = "Benjamin Roland", email = "benjamin.roland@hotmail.fr" }]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.2",
    "mypy>=1.8.0",
    "ruff>=0.3.5",
    "pyupgrade>=3.15.1",
    "pre-commit>=3.6.2",
    "pyclean>=2.7.3",
    "coverage>=7.4.4",
]
docs = [
    "sphinx>=7.2.6",
    "furo>=2023.5.20",
    "myst-parser>=2.0.0",
    "myst-nb>=1.1.0",
]

[project.urls]
homepage = "https://github.com/Parici75/python-uv-bootstrap"
documentation = "https://github.com/Parici75/python-uv-bootstrap"


# Build system
[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"


# Tools
[tool.hatch.build.targets.wheel]
packages = ["src/libs"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

## Ruff
[tool.ruff]
line-length = 100
cache-dir = "~/.cache/ruff"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "PL",   # pylint
    "D200", # pydocstyle, One-line docstring should fit on one line
    "D400", # pydocstyle, First line should end with a period
    "D403", # pydocstyle, First word of the docstring should be capitalized
]
ignore = ["PLR0913"] # Too many arguments to function call

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"] # Allow use of assert in tests


[tool.mypy]
mypy_path = "src"
exclude = ["tests"]
cache_dir = ".cache/mypy/strict"
show_error_codes = true
show_column_numbers = true
follow_imports = "normal"
warn_no_return = true
warn_return_any = true
disallow_any_unimported = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
implicit_reexport = false
strict_equality = true

[tool.pytest.ini_options]
cache_dir = ".cache/pytest/strict"
log_cli = true
log_cli_level = 10
testpaths = ["tests"]
